<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="button_text">I\'m a Button</string>
    <string name="login_title">Login</string>
    <string name="email_input_label">login</string>
    <string name="email_hint">login name</string>
    <string name="password_input_label">password</string>
    <string name="login_button_text">Login</string>
    <string name="list_items_title">List Items</string>
    <string name="radio_button_label">RadioButton</string>
    <string name="checkbox_label">CheckBox</string>
    <string name="switch_label">What does this do?</string>
    <string name="camera_image_description">Camera Image</string>
    <string name="navigate_to_main_activity">Navigate to Main Activity</string>
    <string name="main_activity_title">Main</string>
    <string name="alert_dialog_title">Are you sure you want to continue?</string>
    <string name="alert_dialog_description">You are going to finish the current activity and will be navigated back to the previous activity.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="start_chat_text">Start Chat</string>
    <string name="send_button">SEND</string>
    <string name="default_message">Test Message</string>
    <string name="sym_call_outgoing_description">Sym Call Outgoing Icon</string>
    <string name="sym_call_incoming_description">Sym Call Incoming Icon</string>
    <string name="chat_window_title">Chat Window</string>
    <string name="test_toolbar_text">Test Toolbar</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="weather_forecast_activity_title">Weather Forecast</string>
    <string name="weather_image_description">Weather Image Description</string>
    <string name="delete_message">Delete this message</string>

    <!-- Menu Titles -->
    <string name="choice_one">Choice One</string>
    <string name="choice_two">Choice Two</string>
    <string name="choice_three">Choice Three</string>
    <string name="about">About</string>

    <!-- Toast Text -->
    <string name="empty_email_or_password">Email or Password cannot be empty</string>
    <string name="invalid_email_format">Please enter a valid email address</string>
    <string name="switch_on">Switch is On</string>
    <string name="switch_off">Switch is Off</string>
    <string name="camera_capture_failed">Failed to capture image</string>
    <string name="camera_permission_denied">Camera Permission Denied</string>
    <string name="list_item_passed_description">ListItemsActivity passed: </string>
    <string name="list_item_response">Here is my response</string>
    <string name="no_image_bitmap_received">No Image Bitmap Received</string>
    <string name="image_bitmap_received">Image Bitmap Received and Set</string>
    <string name="request_camera_permission">Requesting Camera Permissions</string>
    <string name="unable_to_open_camera">Unable to open Camera</string>
    <string name="empty_message">Message cannot be empty.</string>

    <!--Shared Preferences-->
    <string name="shared_preferences_file_name">appData</string>
    <string name="shared_preferences_email_key">email</string>

    <!--Intent Keys-->
    <string name="list_item_intent_key">Response</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>